--- a/deploy-ghost.yml
+++ b/deploy-ghost.yml
@@ -1,23 +1,8 @@
 ---
 # Playbook to deploy Ghost and its components
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: ghost-deployment
-  labels:
-    app: ghost
-spec:
-  selector:
-    matchLabels:
-      app: ghost
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: ghost
-    spec:
-      containers:
-      - name: ghost
-        image: ghost
-        
+
+- name: Deploy Ghost
+  hosts: localhost
+  gather_facts: false
+  roles:
+      - deploy_ghost
