--- a/roles/deploy_ghost/tasks/main.yml
+++ b/roles/deploy_ghost/tasks/main.yml
@@ -86,11 +86,16 @@
       - app = mysql
   register: mysql_pod
 
-# - name: Create a ghost blog admin
-#   namespace: "{{ namespace }}"
-#   pod: "{{ mysql_pod.resources[0].metadata.name }}"
-#   command: mysql -u root -p -e "update users set name='admin', password='\$2a\$10\$pof6uUwDghgRlV4N1JPz.O9fh/ARBnR8qxu4deNwd5avEjx0NGGKu', email='ghostadmin@ghost.com', status='active' where id=1;"
-#   register: admin_created
-#   until: "admin_created is not failed"
-#   retries: 6
-#   delay: 10
+- name: Wait
+  wait_for:
+    timeout: 60  
+
+- name: Create a ghost blog admin
+  kubernetes.core.k8s_exec:
+    namespace: "{{ namespace }}"
+    pod: "{{ mysql_pod.resources[0].metadata.name }}"
+    command: mysql "{{ database }}" -u"{{ database_user }}" -p"{{ password }}" -e "update users set name='ascn', password='\$2a\$10\$qPAxD1GCmDCkulO/5oxc9eXNpgyDglIAwFPZ5RHSTjzYomCFNex62', email='ascn@example.com', status='active' where id=1;"
+  register: admin_created
+  until: "admin_created is not failed"
+  retries: 6
+  delay: 10
