--- a/roles/create_secret/tasks/main.yml
+++ b/roles/create_secret/tasks/main.yml
@@ -14,3 +14,4 @@
       stringData:
         password: "{{ password }}"
         rootpassword: "{{ rootpassword }}"
+        passwordMailgun: "{{ passwordMailgun }}"
